--- a/assignment_11.ipynb
+++ b/assignment_11.ipynb
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -478,33 +478,33 @@
      "output_type": "stream",
      "text": [
       "Data Frame\n",
-      "          year  manufacturer    model  condition  cylinders  fuel   odometer  \\\n",
-      "0       2014.0          14.0  24341.0        2.0        6.0   2.0  10.966870   \n",
-      "1       2010.0           7.0  24742.0        2.0        6.0   2.0  11.173655   \n",
-      "2       2020.0           7.0  24789.0        2.0        6.0   2.0   9.860580   \n",
-      "3       2017.0          39.0  27850.0        2.0        6.0   2.0  10.624347   \n",
-      "4       2013.0          13.0  14513.0        0.0        5.0   2.0  11.759786   \n",
-      "...        ...           ...      ...        ...        ...   ...        ...   \n",
-      "419396  2019.0          31.0  19760.0        2.0        5.0   2.0  10.380529   \n",
-      "419397  2020.0          41.0  23634.0        2.0        8.0   2.0   9.395076   \n",
-      "419398  2020.0           6.0  29329.0        2.0        8.0   0.0   8.336630   \n",
-      "419399  2018.0          23.0  13480.0        2.0        5.0   2.0  10.312679   \n",
-      "419400  2019.0           4.0   3067.0        2.0        8.0   2.0  10.030825   \n",
+      "          year  manufacturer    model  condition  cylinders  fuel  odometer  \\\n",
+      "0       2014.0          14.0  24341.0        2.0        6.0   2.0  2.394879   \n",
+      "1       2010.0           7.0  24742.0        2.0        6.0   2.0  2.413559   \n",
+      "2       2020.0           7.0  24789.0        2.0        6.0   2.0  2.288545   \n",
+      "3       2017.0          39.0  27850.0        2.0        6.0   2.0  2.363148   \n",
+      "4       2013.0          13.0  14513.0        0.0        5.0   2.0  2.464686   \n",
+      "...        ...           ...      ...        ...        ...   ...       ...   \n",
+      "419396  2019.0          31.0  19760.0        2.0        5.0   2.0  2.339932   \n",
+      "419397  2020.0          41.0  23634.0        2.0        8.0   2.0  2.240186   \n",
+      "419398  2020.0           6.0  29329.0        2.0        8.0   0.0  2.120659   \n",
+      "419399  2018.0          23.0  13480.0        2.0        5.0   2.0  2.333374   \n",
+      "419400  2019.0           4.0   3067.0        2.0        8.0   2.0  2.305663   \n",
       "\n",
-      "        transmission  drive    price  \n",
-      "0                2.0    3.0  33590.0  \n",
-      "1                2.0    3.0  22590.0  \n",
-      "2                2.0    3.0  39590.0  \n",
-      "3                2.0    3.0  30990.0  \n",
-      "4                0.0    2.0  15000.0  \n",
-      "...              ...    ...      ...  \n",
-      "419396           2.0    1.0  23590.0  \n",
-      "419397           2.0    1.0  30590.0  \n",
-      "419398           2.0    3.0  34990.0  \n",
-      "419399           2.0    1.0  28990.0  \n",
-      "419400           2.0    2.0  30590.0  \n",
+      "        transmission  drive    price  CarAge  \n",
+      "0                2.0    3.0  33590.0     9.0  \n",
+      "1                2.0    3.0  22590.0    13.0  \n",
+      "2                2.0    3.0  39590.0     3.0  \n",
+      "3                2.0    3.0  30990.0     6.0  \n",
+      "4                0.0    2.0  15000.0    10.0  \n",
+      "...              ...    ...      ...     ...  \n",
+      "419396           2.0    1.0  23590.0     4.0  \n",
+      "419397           2.0    1.0  30590.0     3.0  \n",
+      "419398           2.0    3.0  34990.0     3.0  \n",
+      "419399           2.0    1.0  28990.0     5.0  \n",
+      "419400           2.0    2.0  30590.0     4.0  \n",
       "\n",
-      "[419401 rows x 10 columns]\n",
+      "[419401 rows x 11 columns]\n",
       "\n",
       "Correlation Matrix\n",
       "                  year  manufacturer     model  condition  cylinders  \\\n",
@@ -514,33 +514,41 @@
       "condition     0.092594     -0.008107 -0.007577   1.000000   0.288713   \n",
       "cylinders     0.048645     -0.067395  0.017741   0.288713   1.000000   \n",
       "fuel          0.094044     -0.050731  0.071287  -0.024971   0.077143   \n",
-      "odometer     -0.156143     -0.000414 -0.005187  -0.033886  -0.107392   \n",
+      "odometer     -0.162870     -0.005096 -0.010045  -0.011868  -0.072021   \n",
       "transmission  0.128553      0.014786  0.009351  -0.154917   0.151230   \n",
       "drive        -0.092536     -0.041849 -0.068820   0.107715   0.294063   \n",
       "price        -0.005016      0.002059  0.001297   0.001195   0.002235   \n",
+      "CarAge       -1.000000      0.026841 -0.029080  -0.092594  -0.048645   \n",
       "\n",
-      "                  fuel  odometer  transmission     drive     price  \n",
-      "year          0.094044 -0.156143      0.128553 -0.092536 -0.005016  \n",
-      "manufacturer -0.050731 -0.000414      0.014786 -0.041849  0.002059  \n",
-      "model         0.071287 -0.005187      0.009351 -0.068820  0.001297  \n",
-      "condition    -0.024971 -0.033886     -0.154917  0.107715  0.001195  \n",
-      "cylinders     0.077143 -0.107392      0.151230  0.294063  0.002235  \n",
-      "fuel          1.000000 -0.109429      0.246097  0.100454 -0.000918  \n",
-      "odometer     -0.109429  1.000000     -0.259725 -0.089508  0.000575  \n",
-      "transmission  0.246097 -0.259725      1.000000  0.143793 -0.000813  \n",
-      "drive         0.100454 -0.089508      0.143793  1.000000  0.000022  \n",
-      "price        -0.000918  0.000575     -0.000813  0.000022  1.000000  \n",
+      "                  fuel  odometer  transmission     drive     price    CarAge  \n",
+      "year          0.094044 -0.162870      0.128553 -0.092536 -0.005016 -1.000000  \n",
+      "manufacturer -0.050731 -0.005096      0.014786 -0.041849  0.002059  0.026841  \n",
+      "model         0.071287 -0.010045      0.009351 -0.068820  0.001297 -0.029080  \n",
+      "condition    -0.024971 -0.011868     -0.154917  0.107715  0.001195 -0.092594  \n",
+      "cylinders     0.077143 -0.072021      0.151230  0.294063  0.002235 -0.048645  \n",
+      "fuel          1.000000 -0.096469      0.246097  0.100454 -0.000918 -0.094044  \n",
+      "odometer     -0.096469  1.000000     -0.225213 -0.067663 -0.000079  0.162870  \n",
+      "transmission  0.246097 -0.225213      1.000000  0.143793 -0.000813 -0.128553  \n",
+      "drive         0.100454 -0.067663      0.143793  1.000000  0.000022  0.092536  \n",
+      "price        -0.000918 -0.000079     -0.000813  0.000022  1.000000  0.005016  \n",
+      "CarAge       -0.094044  0.162870     -0.128553  0.092536  0.005016  1.000000  \n",
       "\n",
       "Top Absolute Correlations\n",
-      "cylinders  drive           0.294063\n",
-      "condition  cylinders       0.288713\n",
-      "odometer   transmission    0.259725\n",
+      "year       CarAge       1.000000\n",
+      "cylinders  drive        0.294063\n",
+      "condition  cylinders    0.288713\n",
       "dtype: float64\n"
      ]
     }
    ],
    "source": [
     "df = pd.DataFrame(data = df1)\n",
+    "\n",
+    "import datetime\n",
+    "df['CarAge'] = datetime.date.today().year - df.year\n",
+    "df[ 'odometer' ] = np.log( df[ 'odometer' ] )\n",
+    "\n",
+    "\n",
     "#df.drop(['age'],axis=1)\n",
     "print(\"Data Frame\")\n",
     "print(df)\n",
